<resources>
    <string name="app_name">WordSmith</string>
    <string name="req_pass">Request New Password</string>
    <string name="slogan">Narrate your future with us</string>
    <string name="login">Login</string>
    <string name="chapter_title">Chapter One: Origin of the Unknown</string>
    <string name="chapter_text">Chapter 1</string>
    <string name="novel_by">Novel By: Sophea Do</string>
    <string name="explore">Explore</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_logout">Log Out</string>
    <string name="click_to_read">Click Here to Read a Story</string>
    <string name="write_story">Write Your Own Story</string>
    <string name="read_novel">Read Novel</string>

</resources>
