<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/story_bg">

    <TextView
        android:id="@+id/story_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chapter_title"
        android:textColor="@color/text_color"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:padding="5dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_bookmark"
            android:layout_gravity="right"/>
    </FrameLayout>

    <TextView
        android:id="@+id/story_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chapter_text"
        android:textColor="@color/text_color"
        android:layout_below="@+id/story_title"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:textSize="25dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/story_author"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novel_by"
        android:layout_below="@id/story_body"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"/>

</RelativeLayout>